--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ requires-python = ">=3.8"
 license = { file = "LICENSE" }
 authors = [{ name = "YuanQiiii" }]
 
-dependencies = ["PyYAML>=5.4.0", "requests>=2.25.0"]
+dependencies = [
+    "PyYAML>=5.4.0",
+    "requests>=2.25.0",
+]
 
 [project.scripts]
 pku-grade-watcher = "main:main"
